force-app/main/default/objects/Campaign_Build_Request__c/Campaign_Build_Request__c.object-meta.xml
<CustomObject>
    <description>Form used to request a new campaign build out from AdOperations</description>
    <label>Campaign Build Request</label>
    <nameField>
        <label>Campaign Build Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Build Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>