force-app/main/default/objects/Campaign_Build_Request__c/fields/AdOps_Owner__c.field-meta.xml
<CustomField>
    <fullName>AdOps_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdOps Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Build_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>