force-app/main/default/objects/Campaign_Build_Request__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Build Requests</relationshipLabel>
    <relationshipName>Campaign_Build_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>