force-app/main/default/objects/Campaign_Build_Request__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>TextArea</type>
</CustomField>