force-app/main/default/objects/Campaign_Build_Request__c/fields/Campaign_Tested__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Tested</label>
    <type>Checkbox</type>
</CustomField>