force-app/main/default/objects/Campaign_Build_Request__c/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <label>CPI</label>
    <type>TextArea</type>
</CustomField>