force-app/main/default/objects/Campaign_Build_Request__c/fields/Creative__c.field-meta.xml
<CustomField>
    <fullName>Creative__c</fullName>
    <label>Creative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>