force-app/main/default/objects/Campaign_Build_Request__c/fields/Device_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Device_Targeting__c</fullName>
    <label>Device Targeting</label>
    <type>TextArea</type>
</CustomField>