force-app/main/default/objects/Campaign_Build_Request__c/fields/Geo_s__c.field-meta.xml
<CustomField>
    <fullName>Geo_s__c</fullName>
    <label>Geo&apos;s</label>
    <type>TextArea</type>
</CustomField>