force-app/main/default/objects/Campaign_Build_Request__c/fields/Goal_ID__c.field-meta.xml
<CustomField>
    <fullName>Goal_ID__c</fullName>
    <label>Goal ID</label>
    <type>TextArea</type>
</CustomField>