force-app/main/default/objects/Campaign_Build_Request__c/fields/Goal_Names__c.field-meta.xml
<CustomField>
    <fullName>Goal_Names__c</fullName>
    <label>Goal Names</label>
    <type>TextArea</type>
</CustomField>