force-app/main/default/objects/Campaign_Build_Request__c/fields/O_S_Requirments__c.field-meta.xml
<CustomField>
    <fullName>O_S_Requirments__c</fullName>
    <label>O/S Requirments</label>
    <type>TextArea</type>
</CustomField>