force-app/main/default/objects/Campaign_Build_Request__c/fields/Run_Dates__c.field-meta.xml
<CustomField>
    <fullName>Run_Dates__c</fullName>
    <label>Run Dates</label>
    <type>TextArea</type>
</CustomField>