force-app/main/default/objects/Campaign_Build_Request__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Build_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>