force-app/main/default/objects/Campaign_Build_Request__c/fields/Tracking_Platform__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Platform__c</fullName>
    <description>Tracking Platform the direct client uses</description>
    <inlineHelpText>please enter the tracking platform the direct client uses</inlineHelpText>
    <label>Tracking Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjust</fullName>
            </value>
            <value>
                <fullName>AdX</fullName>
            </value>
            <value>
                <fullName>Appsflyer</fullName>
            </value>
            <value>
                <fullName>Apsalar</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>HasOffers</fullName>
            </value>
            <value>
                <fullName>Kochava</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Tapstream</fullName>
            </value>
            <value>
                <fullName>Tune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>