force-app/main/default/objects/Campaign_Build_Request__c/fields/Traffic__c.field-meta.xml
<CustomField>
    <fullName>Traffic__c</fullName>
    <label>Traffic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incent</fullName>
            </value>
            <value>
                <fullName>Non-Incent</fullName>
            </value>
            <value>
                <fullName>Reward Video</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>