force-app/main/default/objects/Campaign_Build_Request__c/listViews/Adops_Build_Out_Queue.listView-meta.xml
<ListView>
    <fullName>Adops_Build_Out_Queue</fullName>
    <columns>Request_ID__c</columns>
    <columns>NAME</columns>
    <columns>Advertiser__c</columns>
    <columns>Platform__c</columns>
    <columns>Traffic__c</columns>
    <columns>Geo_s__c</columns>
    <columns>CPI__c</columns>
    <columns>Goals__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>AdOps_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Process,Pending - Sales,Pending - Adops</value>
    </filters>
    <label>Adops Build Out Queue</label>
</ListView>