force-app/main/default/objects/Campaign_Build_Request__c/listViews/All_Pending_Requests.listView-meta.xml
<ListView>
    <fullName>All_Pending_Requests</fullName>
    <columns>Request_ID__c</columns>
    <columns>NAME</columns>
    <columns>Advertiser__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>AdOps_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Goal ID Request,In Process,Pending - Sales,Pending - Adops</value>
    </filters>
    <label>All Pending Requests</label>
</ListView>